starting animation fixed
load{
changed its width to 630.
removed translate.
}
added some content to .inner-container

--- a/index.html
+++ b/index.html
@@ -11,36 +11,7 @@
 
 <body>
 	<div class="container ">
-		<div class="inner-container">
-			<section class="row">
-				<nav class="small-12 colums">
-					<ul class="main-nav">
-						<li><a href="#">About</a>
-						</li>
-						<li><a href="#">Potfolio</a>
-						</li>
-						<li><a href="#">Contact</a>
-						</li>
-					</ul>
-				</nav>
-				<div class="contain small-10 small-centered columns">
-					<div class="section1 row">
 
-					</div>
-					<div class="section2 row">
-
-					</div>
-					<div class="section3 row">
-
-					</div>
-
-
-				</div>
-
-			</section>
-			<footer>
-			</footer>
-		</div>
 		<header>
 			<div class="logo">
 				<svg class="inner" version="1.1" id="InteractiveSVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-6.8 155.9 618 457.5" enable-background="new -6.8 155.9 618 457.5" xml:space="preserve">
@@ -232,6 +203,55 @@
 				</svg>
 			</div>
 		</header>
+		<div class="inner-container">
+			<section class="">
+				<nav class="">
+					<ul class="main-nav row">
+						<li class="large-4 columns"><a href="#section1">About</a>
+						</li>
+						<li class="large-4 columns"><a href="#section2">Potfolio</a>
+						</li>
+						<li class="large-4 columns"><a href="#section3">Contact</a>
+						</li>
+					</ul>
+				</nav>
+				<div class=" small-10 small-centered columns">
+					<div class="section1 row" id="section1">
+						<div class="large-6 columns image">
+						</div>
+						<div class="large-6 columns info">
+							<p>He as compliment unreserved projecting. Between had observe pretend delight for believe. Do newspaper questions consulted sweetness do. Our sportsman his unwilling fulfilled departure law. Now world own total saved above her cause table. Wicket myself her square remark the should far secure sex. Smiling cousins warrant law explain for whether.</p>
+						</div>
+					</div>
+					<div class="section2 row" id="section2">
+						<ul class="small-block-grid-2">
+							<li>
+								<img width="500px" src="img/p1.png" />
+							</li>
+							<li>
+								<img width="500px" src="img/p2.png" />
+							</li>
+						</ul>
+					</div>
+					<div class="section3 row" id="section3">
+
+					</div>
+
+
+				</div>
+
+			</section>
+			<footer>
+				<p>
+					&copy;Karan Barsiwal 2014
+				</p>
+				<p>
+					Web Developer
+				</p>
+
+
+			</footer>
+		</div>
 
 	</div>
 
