--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="javascript/jquery.js"></script>
 	<script src="javascript/load.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -226,10 +227,22 @@
 					<div class="section2 row" id="section2">
 						<ul class="small-block-grid-2">
 							<li>
-								<img width="500px" src="img/p1.png" />
+								<a>
+									
+									<img  src="img/p1.png" />
+									<p>Opening Type Animation</p>
+									<div></div>
+									<div></div>
+								</a>
 							</li>
 							<li>
-								<img width="500px" src="img/p2.png" />
+								<a>
+									
+									<img  src="img/p2.png" />
+									<p>Sidebar Transition</p>
+									<div></div>
+									<div></div>
+								</a>
 							</li>
 						</ul>
 					</div>
