--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="javascript/jquery.js"></script>
 	<script src="javascript/load.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+	<script src="javascript/nav-animation.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -205,17 +207,24 @@
 			</div>
 		</header>
 		<div class="inner-container">
+
+			<nav class="">
+				<ul class="main-nav">
+					<li class="l1"><a class="icon-user" href="#section1">About</a>
+						<div class="move"></div>
+					</li>
+					<li class="l2"><a class="icon-photo" href="#section2">Potfolio</a>
+					</li>
+					<li class="l3"><a class="icon-megaphone" href="#section3">Contact</a>
+					</li>
+
+				</ul>
+			</nav>
+			<h1 class="title">
+					We Are Dreamers<br>
+					We Are Designers
+				</h1>
 			<section class="">
-				<nav class="">
-					<ul class="main-nav row">
-						<li class="large-4 columns"><a href="#section1">About</a>
-						</li>
-						<li class="large-4 columns"><a href="#section2">Potfolio</a>
-						</li>
-						<li class="large-4 columns"><a href="#section3">Contact</a>
-						</li>
-					</ul>
-				</nav>
 				<div class=" small-10 small-centered columns">
 					<div class="section1 row" id="section1">
 						<div class="large-6 columns image">
@@ -228,8 +237,8 @@
 						<ul class="small-block-grid-2">
 							<li>
 								<a>
-									
-									<img  src="img/p1.png" />
+
+									<img src="img/p1.jpg" />
 									<p>Opening Type Animation</p>
 									<div></div>
 									<div></div>
@@ -237,8 +246,8 @@
 							</li>
 							<li>
 								<a>
-									
-									<img  src="img/p2.png" />
+
+									<img src="img/p2.jpg" />
 									<p>Sidebar Transition</p>
 									<div></div>
 									<div></div>
