changed the content type to slide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="javascript/jquery.js"></script>
 	<script src="javascript/load.js"></script>
+	<script src="javascript/silde.js"></script>
 	<script src="javascript/nav-animation.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Poiret+One' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
@@ -208,33 +209,34 @@
 		</header>
 		<div class="inner-container">
 
-			<nav class="">
-				<ul class="main-nav">
-					<li class="l1"><a class="icon-user" href="#section1">About</a>
-						<div class="move"></div>
-					</li>
-					<li class="l2"><a class="icon-photo" href="#section2">Potfolio</a>
-					</li>
-					<li class="l3"><a class="icon-megaphone" href="#section3">Contact</a>
-					</li>
 
-				</ul>
-			</nav>
 			<h1 class="title">
 					We Are Dreamers<br>
 					We Are Designers
 				</h1>
-			<section class="">
-				<div class=" small-10 small-centered columns">
-					<div class="section1 row" id="section1">
-						<div class="large-6 columns image">
+			<nav class="">
+				<ul class="main-nav">
+					<li class="l1"><a class="icon-user" >About</a>
+						<div class="move"></div>
+					</li>
+					<li class="l2"><a class="icon-photo">Potfolio</a>
+					</li>
+					<li class="l3"><a class="icon-megaphone" >Contact</a>
+					</li>
+
+				</ul>
+			</nav>
+			<section class="slide-fix">
+				<div class="slide">
+					<div class="section1" id="section1">
+						<div class="image">
 						</div>
-						<div class="large-6 columns info">
+						<div class="info">
 							<p>He as compliment unreserved projecting. Between had observe pretend delight for believe. Do newspaper questions consulted sweetness do. Our sportsman his unwilling fulfilled departure law. Now world own total saved above her cause table. Wicket myself her square remark the should far secure sex. Smiling cousins warrant law explain for whether.</p>
 						</div>
 					</div>
-					<div class="section2 row" id="section2">
-						<ul class="small-block-grid-2">
+					<div class="section2" id="section2">
+						<ul class="">
 							<li>
 								<a>
 
@@ -255,7 +257,7 @@
 							</li>
 						</ul>
 					</div>
-					<div class="section3 row" id="section3">
+					<div class="section3" id="section3">
 
 					</div>
 
